--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="#home">YourName</a>
+                <a href="#home">Rohit Hans</a>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
@@ -106,7 +106,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Senior Software Engineer</h3>
-                        <h4>Tech Company Name</h4>
+                        <h4>RPSG Group of Companies</h4>
                         <p class="timeline-date">2022 - Present</p>
                         <ul>
                             <li>Led system design initiatives for scalable microservices architecture</li>
@@ -119,7 +119,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Software Engineer</h3>
-                        <h4>Previous Company</h4>
+                        <h4>Hindustan Computers</h4>
                         <p class="timeline-date">2020 - 2022</p>
                         <ul>
                             <li>Developed RESTful APIs and microservices using modern technologies</li>
@@ -132,7 +132,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Junior Developer</h3>
-                        <h4>First Company</h4>
+                        <h4>Tata Consultancy</h4>
                         <p class="timeline-date">2019 - 2020</p>
                         <ul>
                             <li>Built full-stack web applications using modern frameworks</li>
@@ -328,7 +328,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2024 Rohit Hans. All rights reserved.</p>
         </div>
     </footer>
 
