Add professional photo and update styling for hero section

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="profile-placeholder">
-                    <i class="fas fa-user"></i>
-                </div>
+                <img src="images/your_photo.png" alt="Rohit Hans - Professional Photo" class="profile-photo">
             </div>
         </div>
     </section>
