--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
-                    <a href="resume.pdf" class="btn btn-outline" download>
+                    <a href="Rohit Hans Resume IITD.pdf" class="btn btn-outline" download>
                         <i class="fas fa-download"></i> Download Resume
                     </a>
                 </div>
